Basket - create message section - full adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -122,11 +122,16 @@
                 </ul>
               </div>
             </div>
-            <div class="basket__row basket__row-0 basket__row--card"></div>
-            <div class="basket__row basket__row-0 basket__row--data"></div>
-            <div class="basket__row basket__row-0 basket__row--delivery"></div>
-            <div class="basket__row basket__row-0 basket__row--result"></div>
-            <div class="basket__row basket__row-0 basket__row--message"></div>
+            <div class="basket__row basket__row-1 basket__row--card"></div>
+            <div class="basket__row basket__row-2 basket__row--data"></div>
+            <div class="basket__row basket__row-3 basket__row--delivery"></div>
+            <div class="basket__row basket__row-4 basket__row--result"></div>
+            <div class="basket__row basket__row-5 basket__row--message">
+              <div class="basket__message">
+                <h2 class="basket__message-title">Dziękujemy za złożenie zamówienia!</h2>
+                <p class="basket__message-text">Aktualności będą dostarczane pod wskazany adres e-mail oraz za pośrednictwem wiadomości SMS.</p><a class="basket__btn" href="#" title="">Wróć do strony głównej</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
