Basket - create data form section - full adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -123,7 +123,100 @@
               </div>
             </div>
             <div class="basket__row basket__row-1 basket__row--card"></div>
-            <div class="basket__row basket__row-2 basket__row--data"></div>
+            <div class="basket__row basket__row-2 basket__row--data">
+              <form class="c-form basket__data">
+                <div class="basket__data-col basket__data-col--0">
+                  <div class="basket__data-cover basket__data-cover--0">
+                    <div class="c-form__group c-form__group--input">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Imię" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Nazwisko" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="basket__data-cover basket__data-cover--1">
+                    <div class="c-form__field c-form__field--input">
+                      <div class="c-form__input-wrapper">
+                        <input class="c-form__input" type="text" name="" placeholder="Nazwa firmy (opcjonalnie)" form-focus-js>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="basket__data-cover basket__data-cover--2">
+                    <div class="c-form__group c-form__group--input">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Ulica" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Numer domu" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-2">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Numer mieszkania" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="basket__data-cover basket__data-cover--3">
+                    <div class="c-form__group c-form__group--input">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Ulica" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Numer domu" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-2">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Numer mieszkania" form-focus-js>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="basket__data-cover basket__data-cover--4">
+                    <div class="c-form__field c-form__field--checkbox">
+                      <div class="c-form__checkbox-wrapper">
+                        <input class="c-form__checkbox" type="checkbox" id="checkbox" name="checkbox" value="">
+                        <label class="c-form__checkbox-content" for="checkbox">
+                          <div class="c-form__checkbox-icon"><i></i></div><span class="c-form__checkbox-text">Wyrażam zgodę na przetwarzanie moich danych osobowych w celu rekrutacji zgodnie z art. 6 ust. 1 lit. a Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (ogólne rozporządzenie o ochronie danych) <span>*</span></span>
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__data-col basket__data-col--1">
+                  <button class="basket__btn" type="submit">Następny krok</button>
+                </div>
+              </form>
+            </div>
             <div class="basket__row basket__row-3 basket__row--delivery"></div>
             <div class="basket__row basket__row-4 basket__row--result"></div>
             <div class="basket__row basket__row-5 basket__row--message">
