Basket - create delivery box section - full adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -217,7 +217,45 @@
                 </div>
               </form>
             </div>
-            <div class="basket__row basket__row-3 basket__row--delivery"></div>
+            <div class="basket__row basket__row-3 basket__row--delivery">
+              <div class="basket__delivery">
+                <div class="basket__delivery-col basket__delivery-col--0">
+                  <div class="basket__delivery-cover basket__delivery-cover--0">
+                    <p class="basket__delivery-title">Wysyłka z przedpłatą:</p>
+                    <div class="basket__delivery-box-wrapper"><a class="basket__delivery-box is-active" href="#" title="">
+                        <div><img src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title=""></div>
+                        <p>Kurier UPS</p><span>14,99,-</span></a><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title=""></div>
+                        <p>Kurier UPS</p><span>14,99,-</span></a><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title=""></div>
+                        <p>Kurier UPS</p><span>14,99,-</span></a></div>
+                  </div>
+                  <div class="basket__delivery-cover basket__delivery-cover--1">
+                    <p class="basket__delivery-title">Wysyłka za pobraniem:</p>
+                    <div class="basket__delivery-box-wrapper"><a class="basket__delivery-box is-active" href="#" title="">
+                        <div><img src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title=""></div>
+                        <p>Kurier UPS</p><span>14,99,-</span></a><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title=""></div>
+                        <p>Kurier UPS</p><span>14,99,-</span></a></div>
+                  </div>
+                </div>
+                <div class="basket__delivery-col basket__delivery-col--1">
+                  <div class="basket__delivery-cover basket__delivery-cover--2">
+                    <p class="basket__delivery-title">Wysyłka za pobraniem:</p>
+                    <div class="basket__delivery-box-wrapper"><a class="basket__delivery-box is-active" href="#" title="">
+                        <div><img src="./img/img-paypal.png" srcset="./img/img-paypal@2x.png 2x" alt="" title=""></div>
+                        <p>PayPal</p></a><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-przelewy24.png" srcset="./img/img-przelewy24@2x.png 2x" alt="" title=""></div>
+                        <p>Przelewy24</p></a><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-płatnicza.png" srcset="./img/img-płatnicza@2x.png 2x" alt="" title=""></div>
+                        <p>Karta płatnicza</p></a></div>
+                  </div>
+                </div>
+                <div class="basket__delivery-col basket__delivery-col--2">
+                  <button class="basket__btn" type="submit">Następny krok</button>
+                </div>
+              </div>
+            </div>
             <div class="basket__row basket__row-4 basket__row--result"></div>
             <div class="basket__row basket__row-5 basket__row--message">
               <div class="basket__message">
