Basket - create card box section - w\ adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -110,8 +110,8 @@
       <!-- SECTION BASKET :: START-->
       <section class="section basket" id="basket">
         <div class="section__bg section__bg--light"></div>
-        <div class="c-grid">
-          <div class="basket__wrapper">
+        <div class="basket__wrapper">
+          <div class="c-grid">
             <div class="basket__row basket__row-0 basket__row--tabs">
               <div class="basket__tabs">
                 <ul class="basket__tabs-list">
@@ -122,7 +122,117 @@
                 </ul>
               </div>
             </div>
-            <div class="basket__row basket__row-1 basket__row--card"></div>
+          </div>
+          <div class="basket__row basket__row-1 basket__row--card">
+            <div class="basket__card">
+              <div class="c-grid">
+                <div class="basket__card-col basket__card-col-0">
+                  <div class="basket__product basket__product-0">
+                    <div class="basket__product-left"><img src="./img/img-product-0.png" srcset="./img/img-product-0@2x.png 2x" alt="" title=""></div>
+                    <div class="basket__product-right">
+                      <div>
+                        <p class="basket__product-name">PowerControl</p>
+                      </div>
+                      <div>
+                        <p class="basket__product-price">suma brutto <span>2099,-</span></p><a class="basket__product-btn" href="#" title="">x</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="c-grid-fluid">
+                <div class="basket__card-col basket__card-col-1">
+                  <div class="c-grid">
+                    <div class="basket__additional">
+                      <div class="basket__additional-left">
+                        <p class="basket__additional-info">Dodaj Pedalbox do swojego zamówienia<br><span>a otrzymasz 15% rabatu do całego zamówienia<span></p>
+                      </div>
+                      <div class="basket__additional-right">
+                        <div class="basket__additional-item">
+                          <div><img src="./img/img-product-1.png" srcset="./img/img-product-1@2x.png 2x" alt="" title=""></div>
+                          <div>
+                            <p class="basket__additional-title">Pedalbox+</p>
+                            <p class="basket__additional-sum"><span>849,-</span> cena brutto</p><a class="basket__additional-link" href="#" title="">Dodaj do zamówienia</a>
+                          </div>
+                        </div>
+                        <div class="basket__additional-item">
+                          <div><img src="./img/img-product-2.png" srcset="./img/img-product-2@2x.png 2x" alt="" title=""></div>
+                          <div>
+                            <p class="basket__additional-title">Pedalbox</p>
+                            <p class="basket__additional-sum"><span>749,-</span> cena brutto</p><a class="basket__additional-link" href="#" title="">Dodaj do zamówienia</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="c-grid">
+                <div class="basket__card-col basket__card-col-2">
+                  <div class="basket__price">
+                    <div class="basket__price-left">
+                      <p class="basket__price-desc">Montaż ze strojeniem na hamowni</p><a class="basket__price-link" href="#" title="">Zmień</a>
+                    </div>
+                    <div class="basket__price-right">
+                      <p class="basket__price-sum">suma brutto <span>2099,-</span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__card-col basket__card-col-3"><a class="basket__link" href="#" title="">← Wróc do zakupów</a>
+                  <button class="basket__btn" type="submit">Następny krok</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="basket__row basket__row-1 basket__row--card" style="padding-bottom: 0;">
+            <div class="basket__card">
+              <div class="c-grid">
+                <div class="basket__row basket__row-1 basket__row--card">
+                  <div class="basket__card">
+                    <div class="basket__card-col basket__card-col-0">
+                      <div class="basket__product basket__product-0">
+                        <div class="basket__product-left"><img src="./img/img-product-0.png" srcset="./img/img-product-0@2x.png 2x" alt="" title=""></div>
+                        <div class="basket__product-right">
+                          <div>
+                            <p class="basket__product-name">PowerControl</p>
+                          </div>
+                          <div>
+                            <p class="basket__product-price">suma brutto <span>2099,-</span></p><a class="basket__product-btn" href="#" title="">x</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="basket__product basket__product-1">
+                        <div class="basket__product-left"><img src="./img/img-product-1.png" srcset="./img/img-product-1@2x.png 2x" alt="" title=""></div>
+                        <div class="basket__product-right">
+                          <div>
+                            <p class="basket__product-name">Pedalbox+</p>
+                          </div>
+                          <div>
+                            <p class="basket__product-price">suma brutto <span>849,-</span></p><a class="basket__product-btn" href="#" title="">x</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="basket__card-col basket__card-col-2">
+                      <div class="basket__price">
+                        <div class="basket__price-left">
+                          <p class="basket__price-desc">Montaż ze strojeniem na hamowni</p><a class="basket__price-link" href="#" title="">Zmień</a>
+                        </div>
+                        <div class="basket__price-right">
+                          <p class="basket__price-info"><span class="basket__price-info--perc">-15%</span><span class="basket__price-info--old">2948,-</span></p>
+                          <p class="basket__price-sum">suma brutto <span>2099,-</span></p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="basket__card-col basket__card-col-3"><a class="basket__link" href="#" title="">← Wróc do zakupów</a>
+                      <button class="basket__btn" type="submit">Następny krok</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="c-grid">
             <div class="basket__row basket__row-2 basket__row--data">
               <form class="c-form basket__data">
                 <div class="basket__data-col basket__data-col--0">
@@ -217,6 +327,8 @@
                 </div>
               </form>
             </div>
+          </div>
+          <div class="c-grid">
             <div class="basket__row basket__row-3 basket__row--delivery">
               <div class="basket__delivery">
                 <div class="basket__delivery-col basket__delivery-col--0">
@@ -256,7 +368,11 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="c-grid">
             <div class="basket__row basket__row-4 basket__row--result"></div>
+          </div>
+          <div class="c-grid">
             <div class="basket__row basket__row-5 basket__row--message">
               <div class="basket__message">
                 <h2 class="basket__message-title">Dziękujemy za złożenie zamówienia!</h2>
