Basket - create result section - full adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -370,7 +370,63 @@
             </div>
           </div>
           <div class="c-grid">
-            <div class="basket__row basket__row-4 basket__row--result"></div>
+            <div class="basket__row basket__row-4 basket__row--result">
+              <div class="basket__result">
+                <div class="basket__result-col basket__result-col-0">
+                  <div class="basket__card-col basket__card-col-0">
+                    <p class="basket__product-title">Produkt:</p>
+                    <div class="basket__product basket__product-0">
+                      <div class="basket__product-left"><img src="./img/img-product-0.png" srcset="./img/img-product-0@2x.png 2x" alt="" title=""></div>
+                      <div class="basket__product-right">
+                        <div>
+                          <p class="basket__product-name">PowerControl</p>
+                        </div>
+                        <div>
+                          <p class="basket__product-price">suma brutto <span>2099,-</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__result-col basket__result-col-1">
+                  <div class="basket__result-wrapper">
+                    <div class="basket__result-left">
+                      <p class="basket__result-title">Dane adresowe:</p>
+                      <div class="basket__result-address">
+                        <p><span>John Doe</span><span>Coca Cola S.A.</span></p>
+                        <p><span>ul. Joliet 25/7</span><span>00-000 Warszawa</span></p>
+                      </div>
+                    </div>
+                    <div class="basket__result-middle">
+                      <p class="basket__result-title">Wysyłka z przedpłatą:</p><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-paypal.png" srcset="./img/img-paypal@2x.png 2x" alt="" title=""></div>
+                        <p>PayPal</p></a>
+                    </div>
+                    <div class="basket__result-right">
+                      <p class="basket__result-title">Płatność za pośrednictwem:</p><a class="basket__delivery-box" href="#" title="">
+                        <div><img src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title=""></div>
+                        <p>Kurier UPS</p><span>14,99,-</span></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__result-col basket__result-col-2">
+                  <div class="basket__card-col basket__card-col-2">
+                    <div class="basket__price">
+                      <div class="basket__price-left">
+                        <p class="basket__price-desc">Montaż ze strojeniem na hamowni</p><a class="basket__price-link" href="#" title="">Zmień</a>
+                      </div>
+                      <div class="basket__price-right">
+                        <p class="basket__price-info"><span class="basket__price-info--perc">-15%</span><span class="basket__price-info--old">2948,-</span></p>
+                        <p class="basket__price-sum">suma brutto <span>2099,-</span></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="basket__card-col basket__card-col-3">
+                    <button class="basket__btn" type="submit">Zapłać</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="c-grid">
             <div class="basket__row basket__row-5 basket__row--message">
