Basket - fix desktop version - full adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -111,18 +111,18 @@
       <section class="section basket" id="basket">
         <div class="section__bg section__bg--light"></div>
         <div class="basket__wrapper">
-          <div class="c-grid">
-            <div class="basket__row basket__row-0 basket__row--tabs"><a class="basket__link" href="#" title="">← Wróc do zakupów</a>
-              <div class="basket__tabs">
-                <ul class="basket__tabs-list">
-                  <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
-                  <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
-                  <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
-                  <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
+                <div class="c-grid">
+                  <div class="basket__row basket__row-0 basket__row--tabs">
+                    <div class="basket__tabs">
+                      <ul class="basket__tabs-list">
+                        <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
           <div class="basket__row basket__row-1 basket__row--card">
             <div class="basket__card">
               <div class="c-grid">
@@ -232,6 +232,18 @@
               </div>
             </div>
           </div>
+                <div class="c-grid">
+                  <div class="basket__row basket__row-0 basket__row--tabs">
+                    <div class="basket__tabs">
+                      <ul class="basket__tabs-list">
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
           <div class="c-grid">
             <div class="basket__row basket__row-2 basket__row--data">
               <form class="c-form basket__data">
@@ -328,6 +340,18 @@
               </form>
             </div>
           </div>
+                <div class="c-grid">
+                  <div class="basket__row basket__row-0 basket__row--tabs">
+                    <div class="basket__tabs">
+                      <ul class="basket__tabs-list">
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
           <div class="c-grid">
             <div class="basket__row basket__row-3 basket__row--delivery">
               <div class="basket__delivery">
@@ -369,6 +393,18 @@
               </div>
             </div>
           </div>
+                <div class="c-grid">
+                  <div class="basket__row basket__row-0 basket__row--tabs">
+                    <div class="basket__tabs">
+                      <ul class="basket__tabs-list">
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
           <div class="c-grid">
             <div class="basket__row basket__row-4 basket__row--result">
               <div class="basket__result">
@@ -428,6 +464,18 @@
               </div>
             </div>
           </div>
+                <div class="c-grid">
+                  <div class="basket__row basket__row-0 basket__row--tabs">
+                    <div class="basket__tabs">
+                      <ul class="basket__tabs-list">
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
+                        <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
           <div class="c-grid">
             <div class="basket__row basket__row-5 basket__row--message">
               <div class="basket__message">
