Basket - fix mobile & extra-mobile version - full adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -111,6 +111,9 @@
       <section class="section basket" id="basket">
         <div class="section__bg section__bg--light"></div>
         <div class="basket__wrapper">
+          <div class="c-grid">
+            <div class="basket__row basket__row-0 basket__row--link"><a class="basket__link" href="#" title="">← Wróc do zakupów</a></div>
+          </div>
                 <div class="c-grid">
                   <div class="basket__row basket__row-0 basket__row--tabs">
                     <div class="basket__tabs">
@@ -389,6 +392,23 @@
                 </div>
                 <div class="basket__delivery-col basket__delivery-col--2">
                   <button class="basket__btn" type="submit">Następny krok</button>
+                </div>
+                <div class="basket__delivery-col basket__delivery-col--3">
+                  <div class="basket__card-col basket__card-col-2">
+                    <div class="basket__price">
+                      <div class="basket__price-left">
+                        <p class="basket__price-desc">Montaż ze strojeniem na hamowni</p><a class="basket__price-link" href="#" title="">Zmień</a>
+                      </div>
+                      <div class="basket__price-right">
+                        <p class="basket__price-sum">suma brutto</p>
+                        <p class="basket__price-info"><span class="basket__price-info--perc">-15%</span><span class="basket__price-info--old">2948,-</span></p>
+                        <p class="basket__price-sum"><span>2099,-</span></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__delivery-col basket__delivery-col--4">
+                  <button class="basket__btn" type="submit">Złóż zamówienie</button>
                 </div>
               </div>
             </div>
