Footer - fix mobile resolution font-size.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -525,9 +525,9 @@
             <div class="footer__wrapper-middle">
               <div class="social">
                 <ul class="social__list">
-                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-facebook-logo"></i></a></li>
-                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-youtube-logo"></i></a></li>
-                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-instagram-logo"></i></a></li>
+                  <li class="social__item"><a class="social__link social__link--fb" href="#" title="facebook-logo"><i class="icon-font icon-facebook-logo"></i></a></li>
+                  <li class="social__item"><a class="social__link social__link--yb" href="#" title="youtube-logo"><i class="icon-font icon-youtube-logo"></i></a></li>
+                  <li class="social__item"><a class="social__link social__link--in" href="#" title="instagram-logo"><i class="icon-font icon-instagram-logo"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -540,9 +540,9 @@
           <div class="footer__wrapper-left">
             <div class="social">
               <ul class="social__list">
-                <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-facebook-logo"></i></a></li>
-                <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-youtube-logo"></i></a></li>
-                <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-instagram-logo"></i></a></li>
+                <li class="social__item"><a class="social__link social__link--fb" href="#" title="facebook-logo"><i class="icon-font icon-facebook-logo"></i></a></li>
+                <li class="social__item"><a class="social__link social__link--yb" href="#" title="youtube-logo"><i class="icon-font icon-youtube-logo"></i></a></li>
+                <li class="social__item"><a class="social__link social__link--in" href="#" title="instagram-logo"><i class="icon-font icon-instagram-logo"></i></a></li>
               </ul>
             </div>
             <nav class="nav nav--footer">
